Fixes for Ensure.that